--- a/controls/pcidss_ocp4.yml
+++ b/controls/pcidss_ocp4.yml
@@ -479,7 +479,7 @@ controls:
       drift.
     status: automated
     rules:
-    - compliancesuite_exists
+    - scansettingbinding_exists
 
   - id: Req-2.2.5
     title: 2.2.5 Remove all unnecessary functionality, such as scripts, drivers, features,
