--- a/controls/srg_ctr/SRG-APP-000516-CTR-001325.yml
+++ b/controls/srg_ctr/SRG-APP-000516-CTR-001325.yml
@@ -161,7 +161,7 @@ controls:
   - rbac_limit_secrets_access
   - rbac_pod_creation_access
   - rbac_wildcard_use
-  - compliancesuite_exists
+  - scansettingbinding_exists
   - scc_drop_container_capabilities
   - scc_limit_container_allowed_capabilities
   - scc_limit_ipc_namespace
