OCP4: Use the sysctl probe when checking kubelet sysctls
We used to check one particular file and were using the lineinfile
probe. This would fail in case someone just uses a different file for
setting the sysctls. Let's use the sysctl probe instead.

Related: OCPBUGS-11422

--- a/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_keys_root_maxbytes/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_keys_root_maxbytes/rule.yml
@@ -92,7 +92,8 @@ references:
   srg: SRG-APP-000516-CTR-001325
 
 template:
-  name: lineinfile
-  vars:
-    path: /etc/sysctl.d/90-kubelet.conf
-    text: "kernel.keys.root_maxbytes=25000000"
+    name: sysctl
+    vars:
+        sysctlvar: kernel.keys.root_maxbytes
+        sysctlval: '25000000'
+        datatype: int
