--- a/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_keys_root_maxkeys/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_keys_root_maxkeys/rule.yml
@@ -92,7 +92,8 @@ references:
   srg: SRG-APP-000516-CTR-001325
 
 template:
-  name: lineinfile
+  name: sysctl
   vars:
-    path: /etc/sysctl.d/90-kubelet.conf
-    text: "kernel.keys.root_maxkeys=1000000"
+      sysctlvar: kernel.keys.root_maxkeys
+      sysctlval: '1000000'
+      datatype: int
