--- a/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_vm_panic_on_oom/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_vm_panic_on_oom/rule.yml
@@ -92,7 +92,8 @@ references:
   srg: SRG-APP-000516-CTR-001325
 
 template:
-  name: lineinfile
+  name: sysctl
   vars:
-    path: /etc/sysctl.d/90-kubelet.conf
-    text: "kernel.panic=10"
+      sysctlvar: vm.panic_on_oom
+      sysctlval: '0'
+      datatype: int
