--- a/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_panic/rule.yml
+++ b/applications/openshift/kubelet/kubelet_enable_protect_kernel_sysctl_kernel_panic/rule.yml
@@ -92,7 +92,8 @@ references:
   srg: SRG-APP-000516-CTR-001325
 
 template:
-  name: lineinfile
-  vars:
-    path: /etc/sysctl.d/90-kubelet.conf
-    text: "kernel.panic=10"
+    name: sysctl
+    vars:
+        sysctlvar: kernel.panic
+        sysctlval: '10'
+        datatype: int
