--- a/linux_os/guide/system/permissions/partitions/mount_option_var_tmp_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_tmp_nodev/rule.yml
@@ -44,7 +44,7 @@ references:
     stigid@rhel8: RHEL-08-040132
 
 platforms:
-  - machine
+  - machine and mount[var-tmp]
 
 template:
     name: mount_option
