templates/mount_option: Switch mount Ansible remediation module's state back to 'mounted'
This might cause problems for offline systems, but we are not going
to use Ansible for offline remediation. At least for now.

--- a/shared/templates/mount_option/ansible.template
+++ b/shared/templates/mount_option/ansible.template
@@ -55,7 +55,7 @@
     path: "{{{ MOUNTPOINT }}}"
     src: "{{ mount_info.source }}"
     opts: "{{ mount_info.options }}"
-    state: "present"
+    state: "mounted"
     fstype: "{{ mount_info.fstype }}"
   when:
     - (device_name.stdout is defined and (device_name.stdout | length > 0)) or ("{{{ TABFILE }}}" | length == 0)
