Update of ansible part

--- a/linux_os/guide/system/apparmor/all_apparmor_profiles_enforced/ansible/shared.yml
+++ b/linux_os/guide/system/apparmor/all_apparmor_profiles_enforced/ansible/shared.yml
@@ -4,17 +4,20 @@
 # complexity = low
 # disruption = low
 
-- name: Ensure all AppArmor Profiles are reloaded
-  ansible.builtin.shell: apparmor_parser -q -r /etc/apparmor.d/
+- name: {{{ rule_title }}} - Ensure all AppArmor Profiles are reloaded
+  ansible.builtin.command: apparmor_parser -q -r /etc/apparmor.d/
 
-- name:  Ensure all AppArmor Profiles are enforcing
-  ansible.builtin.shell: aa-enforce /etc/apparmor.d/*
+- name:  {{{ rule_title }}} - Ensure all AppArmor Profiles are enforcing
+  ansible.builtin.command: aa-enforce /etc/apparmor.d/*
 
-- name: Collect unconfined processes 
-  ansible.builtin.shell: aa-unconfined
+- name: {{{ rule_title }}} - Collect unconfined processes 
+  ansible.builtin.command: aa-unconfined
   register: unconfined_processes
 
-- name: Provide details about unconfined processes 
-  ansible.builtin.shell: echo "The process {{ item }} may need to have a profile created or activated for them and then be restarted."
+- name: {{{ rule_title }}} - Provide details about unconfined processes 
+  ansible.builtin.assert: 
+    that:
+       - unconfined_processes.stdout_lines | length > 0 
+    success_msg: "The process {{ item }} may need to have a profile created or activated for them and then be restarted."
+    fail_msg: ""
   with_items: "{{ unconfined_processes.stdout_lines }}"
-  when: unconfined_processes.stdout_lines | length > 0
