test - enable fedora product build with cusp_fedora profile

--- a/linux_os/guide/system/software/updating/package_gnome_software_installed/rule.yml
+++ b/linux_os/guide/system/software/updating/package_gnome_software_installed/rule.yml
@@ -11,8 +11,8 @@ rationale: 'The GNOME software package must be installed so that it can be used 
 
 severity: medium
 
-references:
-    cusp_fedora: 3.2
+#references:
+#    cusp_fedora: 3.2
 
 ocil_clause: 'the package is not installed'
 
