--- a/products/fedora/product.yml
+++ b/products/fedora/product.yml
@@ -4,6 +4,8 @@ type: platform
 
 benchmark_id: FEDORA
 benchmark_root: "../../linux_os/guide"
+additional_content_directories:
+  - "products/firefox/guide"
 
 profiles_root: "./profiles"
 
