--- a/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/accounts_users_netrc_file_permissions/rule.yml
@@ -13,8 +13,8 @@ description: |-
 
 rationale: |-
     .netrc files may contain unencrypted passwords that may be used to attack other systems.
-    Note: While the complete removal of .netrc files is recommended if any are required on the
-          system secure permissions must be applied.
+    Note: While the complete removal of .netrc files is recommended, if any are required on the
+          system, secure permissions must be applied.
 
 severity: medium
 
