OCP4: STIG does not mandate FIO to be installed

--- a/applications/openshift/integrity/file_integrity_exists/rule.yml
+++ b/applications/openshift/integrity/file_integrity_exists/rule.yml
@@ -22,7 +22,7 @@ references:
   nerc-cip: CIP-003-8 R4.2,CIP-003-8 R6,CIP-007-3 R4,CIP-007-3 R4.1,CIP-007-3 R4.2
   nist: SC-4(23),SI-6,SI-7,SI-7(1),CM-6(a),SI-7(2),SI-4(24)
   pcidss: Req-10.5.5,Req-11.5
-  srg: SRG-APP-000472-CTR-001170,SRG-APP-000473-CTR-001175,SRG-APP-000474-CTR-001180
+  srg: SRG-APP-000516-CTR-001325
 
 platform: not ocp4-on-hypershift
 
