--- a/controls/srg_ctr/SRG-APP-000472-CTR-001170.yml
+++ b/controls/srg_ctr/SRG-APP-000472-CTR-001170.yml
@@ -4,6 +4,6 @@ controls:
   - medium
   title: The organization-defined role must verify correct operation of security functions
     in {{{ full_name }}}.
-  rules:
+  related_rules:
   - file_integrity_exists
   status: automated
