--- a/controls/srg_ctr/SRG-APP-000473-CTR-001175.yml
+++ b/controls/srg_ctr/SRG-APP-000473-CTR-001175.yml
@@ -8,6 +8,6 @@ controls:
     but is not limited to, establishing system accounts, configuring access authorizations
     (i.e., permissions, privileges), setting events to be audited, and setting intrusion
     detection parameters.'
-  rules:
+  related_rules:
   - file_integrity_exists
   status: automated
