--- a/controls/srg_ctr/SRG-APP-000516-CTR-001325.yml
+++ b/controls/srg_ctr/SRG-APP-000516-CTR-001325.yml
@@ -89,6 +89,7 @@ controls:
   - kubelet_eviction_thresholds_set_hard_memory_available
   - kubelet_eviction_thresholds_set_hard_nodefs_available
   - kubelet_eviction_thresholds_set_hard_nodefs_inodesfree
+  - file_integrity_exists
   - file_groupowner_cni_conf
   - file_groupowner_controller_manager_kubeconfig
   - file_groupowner_etcd_data_dir
