OCP4: CO related rules resolve three SRGs in SI-6

--- a/controls/srg_ctr/SRG-APP-000474-CTR-001180.yml
+++ b/controls/srg_ctr/SRG-APP-000474-CTR-001180.yml
@@ -7,6 +7,8 @@ controls:
     security functions are discovered.
   status: does not meet
   related_rules:
+  - scansettingbinding_exists
+  - scansettings_have_schedule
   - file_integrity_exists
   status_justification: |-
     If the OpenShift Compliance Operator is configured in accordance with
