--- a/linux_os/guide/system/apparmor/all_apparmor_profiles_enforced/rule.yml
+++ b/linux_os/guide/system/apparmor/all_apparmor_profiles_enforced/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: sle12,sle15
+prodtype: sle12,sle15,ubuntu2004,ubuntu2204
 
 title:  'Enforce all AppArmor Profiles'
 
@@ -9,15 +9,19 @@ description: |-
     To set all profiles to enforce mode run the following command:
     <pre>$ sudo aa-enforce /etc/apparmor.d/*</pre>
     To list unconfined processes run the following command:
+    {{% if 'ubuntu' in product %}}
+    <pre>$ sudo apparmor_status | grep processes</pre>
+    {{% else %}}
     <pre>$ sudo aa-unconfined</pre>
-    Any unconfined processes may need to have a profile created or activated 
+    {{% endif %}}
+    Any unconfined processes may need to have a profile created or activated
     for them and then be restarted.
 
 rationale: |-
-    Security configuration requirements vary from site to site. Some sites may 
-    mandate a policy that is stricter than the default policy, which is perfectly 
-    acceptable. This recommendation is intended to ensure that any policies that 
-    exist on the system are activated. 
+    Security configuration requirements vary from site to site. Some sites may
+    mandate a policy that is stricter than the default policy, which is perfectly
+    acceptable. This recommendation is intended to ensure that any policies that
+    exist on the system are activated.
 
 severity: medium
 
@@ -28,4 +32,5 @@ identifiers:
 references:
     cis@sle12: 1.7.1.4
     cis@sle15: 1.7.1.4
-
+    cis@ubuntu2004: 1.7.1.4
+    cis@ubuntu2204: 1.6.1.4
