--- a/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_rng/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_use_strong_rng/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 # TODO: The plan is not to need this for RHEL>=8.4
 # TODO: Compliant setting is SSH_USE_STRONG_RNG set to 32 or more
-prodtype: ol8,rhel8,rhel9
+prodtype: fedora,ol8,rhel8,rhel9
 
 title: 'SSH server uses strong entropy to seed'
 
