--- a/linux_os/guide/system/network/network-nftables/service_nftables_disabled/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/service_nftables_disabled/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: alinux3,rhel8,rhel9,sle15,ubuntu2004,ubuntu2204
+prodtype: fedora,alinux3,rhel8,rhel9,sle15,ubuntu2004,ubuntu2204
 
 title: 'Verify nftables Service is Disabled'
 
