--- a/linux_os/guide/services/imap/disabling_cyrus-imapd/package_cyrus-imapd_removed/rule.yml
+++ b/linux_os/guide/services/imap/disabling_cyrus-imapd/package_cyrus-imapd_removed/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: rhel8,rhel9,ubuntu2004,ubuntu2204
+prodtype: fedora,rhel8,rhel9,ubuntu2004,ubuntu2204
 
 title: 'Uninstall cyrus-imapd Package'
 
