--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_sudo_log_events/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_sudo_log_events/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: rhel8,rhel9,ubuntu2004,ubuntu2204
+prodtype: fedora,rhel8,rhel9,ubuntu2004,ubuntu2204
 
 title: 'Record Attempts to perform maintenance activities'
 
