--- a/linux_os/guide/system/logging/journald/socket_systemd-journal-remote_disabled/rule.yml
+++ b/linux_os/guide/system/logging/journald/socket_systemd-journal-remote_disabled/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: rhel8,rhel9,ubuntu2204
+prodtype: fedora,rhel8,rhel9,ubuntu2204
 
 title: 'Disable systemd-journal-remote Socket'
 
