--- a/controls/cusp_fedora.yml
+++ b/controls/cusp_fedora.yml
@@ -3,7 +3,7 @@ policy: 'Fedora Common User Security Policy'
 title: 'Fedora Common User Security Policy'
 id: cusp_fedora
 version: '1.0.0'
-source: TBD
+source: jodehnal's bachelor thesis on creating a SCAP profile for common users of Fedora workstation - link will be added after publication
 
 controls:
   ###
@@ -68,7 +68,7 @@ controls:
       - file_owner_user_cfg
       - file_permissions_grub2_cfg
       - file_permissions_user_cfg
-      - grub2_password  # only check
+      - grub2_password
       # UEFI
       - file_groupowner_efi_grub2_cfg
       - file_groupowner_efi_user_cfg
@@ -76,7 +76,7 @@ controls:
       - file_owner_efi_user_cfg
       - file_permissions_efi_grub2_cfg
       - file_permissions_efi_user_cfg
-      - grub2_uefi_password  # only check
+      - grub2_uefi_password
 
   - id: 3.2
     title: Software updates
@@ -152,11 +152,6 @@ controls:
       - audit_rules_time_watch_localtime
       - audit_rules_networkconfig_modification
       - audit_rules_privileged_commands
-      - audit_rules_unsuccessful_file_modification_creat
-      - audit_rules_unsuccessful_file_modification_ftruncate
-      - audit_rules_unsuccessful_file_modification_open
-      - audit_rules_unsuccessful_file_modification_openat
-      - audit_rules_unsuccessful_file_modification_truncate
       - audit_rules_unsuccessful_file_modification_creat
       - audit_rules_unsuccessful_file_modification_ftruncate
       - audit_rules_unsuccessful_file_modification_open
@@ -322,7 +317,7 @@ controls:
       - file_groupowner_at_allow
       - file_permissions_at_allow
 
-  - id: 3.10
+  - id: "3.10"
     title: Service minimization
     description: >-
       The user should remove any services that are not necessary for normal system usage.
@@ -351,7 +346,6 @@ controls:
       - package_rsh-server_removed
       - package_sendmail_removed
       - package_ypbind_removed
-      - package_ypserv_removed
       - package_talk-server_removed
       - package_talk_removed
   ###
@@ -364,7 +358,6 @@ controls:
     status: partial
     rules:
       - no_empty_passwords
-      - accounts_passwords_pam_faillock_deny
       - set_password_hashing_algorithm_systemauth
       - set_password_hashing_algorithm_passwordauth
       - set_password_hashing_algorithm_logindefs
